--- a/Main screen/styles.css
+++ b/Main screen/styles.css
@@ -38,14 +38,16 @@ body {
 
 .search-bar {
     display: flex;
-    align-items: center;
-    width: 100%;
+	margin-left: 20%;
+	margin-right: 20%;
+	/*align-items: center;  
+    width: 100%;*/ 
     margin-bottom: 10px;
 }
 
 .search {
-    margin-left: 400px;
-    margin-right: 400px;
+    /*margin-left: 400px;
+    margin-right: 400px; */
     width: 100%;
     height: 66px;
     border-radius: 33px;
@@ -56,7 +58,8 @@ body {
 }
 
 .img-search {
-    padding-left: 420px;
+    margin-top: 1px;
+    margin-left: 20px;
     position: absolute;
 }
 
