--- a/Search in category/styles.css
+++ b/Search in category/styles.css
@@ -39,145 +39,73 @@ body {
 }
 
 .search-bar {
-    display: flex;
-    align-items: center;
-    width: 100%;
-    margin-bottom: 10px;
+  display: flex;
+  margin-left: 15%;
+  margin-right: 15%;
+/*align-items: center;  
+  width: 100%;*/ 
+  margin-bottom: 10px;
 }
 
 .search {
-    width: 100%;
-    height: 66px;
-    border-radius: 33px;
-    font-family: Poppins;
-    font-weight: 600;
-    padding-left: 80px;
-    font-size: 24px;
+  /*margin-left: 400px;
+  margin-right: 400px; */
+  width: 100%;
+  height: 66px;
+  border-radius: 33px;
+  font-family: Poppins;
+  font-weight: 600;
+  padding-left: 80px;
+  font-size: 24px;
 }
 
 .img-search {
-    padding-left: 20px;
-    position: absolute;
+  margin-top: 17px;
+  margin-left: 20px;
+  position: absolute;
 }
 
 .img-search:hover {
-    cursor: pointer;
+  cursor: pointer;
 }
 
 .title {
-    display: block;
-    text-align: center;
-    font-family: Poppins;
-    font-weight: 500;
-    font-size: 96px;
+  display: block;
+  text-align: center;
+  font-family: Poppins;
+  font-weight: 500;
+  font-size: 96px;
 }
 
+.item-grid {
+  margin-top: 60px;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  column-gap: 50px;
+  row-gap: 40px;
+  margin-left: 15%;
+  margin-right: 15%;
+}
 
+.item-wrapper {
+  width: 100%;
+  box-shadow: 0px 1px 1px gray;
+  border-radius: 10px;
+}
 
-.menu {
-    display: flex;
-    flex-direction: row;
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-  }
-  
-  .menu > li {
-    margin: 0 1rem;
-    overflow: hidden;
-  }
-  
-  .menu-button-container {
-    display: none;
-    height: 100%;
-    width: 30px;
-    cursor: pointer;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-  }
-  
-  #menu-toggle {
-    display: none;
-  }
-  
-  .menu-button,
-  .menu-button::before,
-  .menu-button::after {
-    display: block;
-    background-color: #fff;
-    position: absolute;
-    height: 4px;
-    width: 30px;
-    transition: transform 400ms cubic-bezier(0.23, 1, 0.32, 1);
-    border-radius: 2px;
-  }
-  
-  .menu-button::before {
-    content: '';
-    margin-top: -8px;
-  }
-  
-  .menu-button::after {
-    content: '';
-    margin-top: 8px;
-  }
-  
-  #menu-toggle:checked + .menu-button-container .menu-button::before {
-    margin-top: 0px;
-    transform: rotate(405deg);
-  }
-  
-  #menu-toggle:checked + .menu-button-container .menu-button {
-    background: rgba(255, 255, 255, 0);
-  }
-  
-  #menu-toggle:checked + .menu-button-container .menu-button::after {
-    margin-top: 0px;
-    transform: rotate(-405deg);
-  }
-  
-  @media (max-width: 700px) {
-    .menu-button-container {
-      display: flex;
-    }
-    .menu {
-      position: absolute;
-      top: 0;
-      margin-top: 50px;
-      left: 0;
-      flex-direction: column;
-      width: 100%;
-      justify-content: center;
-      align-items: center;
-    }
-    #menu-toggle ~ .menu li {
-      height: 0;
-      margin: 0;
-      padding: 0;
-      border: 0;
-      transition: height 400ms cubic-bezier(0.23, 1, 0.32, 1);
-    }
-    #menu-toggle:checked ~ .menu li {
-      border: 1px solid #333;
-      height: 2.5em;
-      padding: 0.5em;
-      transition: height 400ms cubic-bezier(0.23, 1, 0.32, 1);
-    }
-    #menu-toggle:checked ~ .menu span {
-        display: none;
-        height: 0;
-      }
-    .menu > li {
-      display: flex;
-      justify-content: center;
-      margin: 0;
-      padding: 0.5em 0;
-      width: 100%;
-      color: white;
-      background-color: #222;
-    }
-    .menu > li:not(:last-child) {
-      border-bottom: 1px solid #444;
-    }
-  }
+.item-picture {
+  border-radius: 10px 10px 0 0;
+  width: 100%;
+}
+
+.item-label {
+  border-radius: 0 0 10px 10px;
+  overflow: hidden;
+  text-align: center;
+  color:#FFF0DE;
+  width: 100%;
+  background: linear-gradient(90deg, rgba(255,59,148,0.41) 0%, rgba(188,38,128,0.41) 100%);
+  font-family: Poppins;
+  font-weight: 600;
+  padding: 10px 0px;
+}
