--- a/Recipe/styles.css
+++ b/Recipe/styles.css
@@ -39,6 +39,26 @@ body {
     height: 100%;
 }
 
+@media only screen and (max-width: 650px) {
+    .content {
+        display: flex;
+        width: 100%;
+        height: 100%;
+        flex-wrap: wrap;
+        flex-direction: row;
+    }
+
+    .left {
+        flex: 1;
+        width: 100%;
+    }
+    
+    .right {
+        flex: 1;
+        width: 100%;
+    }
+}
+
 .cook-button-container {
     width: 100%;
 }
@@ -81,7 +101,7 @@ body {
 
 .right {
     margin-left: 30px;
-    margin-right: 10%;
+    margin-right: 3%;
     height: 100%;
     width: 40%;
 }
@@ -123,6 +143,7 @@ body {
 
 .preview-image-container {
     width: 60%;
+    min-width: 150px;
 }
 
 #img-preview {
@@ -135,6 +156,7 @@ body {
     margin-left: auto;
     margin-top: 50px;
     width: 60%;
+    min-width: 150px;
 }
 
 .similar-recipe-wrapper {
