--- a/Recipe/styles.css
+++ b/Recipe/styles.css
@@ -40,26 +40,6 @@ body {
     height: 100%;
 }
 
-@media only screen and (max-width: 650px) {
-    .content {
-        display: flex;
-        width: 100%;
-        height: 100%;
-        flex-wrap: wrap;
-        flex-direction: row;
-    }
-
-    .left {
-        flex: 1;
-        width: 100%;
-    }
-    
-    .right {
-        flex: 1;
-        width: 100%;
-    }
-}
-
 .cook-button-container {
     width: 100%;
 }
@@ -87,6 +67,7 @@ body {
 
 #recipe-title {
     margin-top: 30px;
+    margin-bottom: 30px;
     display: block;
     text-align: center; 
     font-family: 'Poppins';
@@ -177,4 +158,33 @@ body {
     font-size: 25pt;
     transform: translate(-15%, -50%);
     font-family: 'Lily Script One';
+}
+
+@media only screen and (max-width: 650px) {
+    .content {
+        display: flex;
+        width: 100%;
+        height: 100%;
+        flex-wrap: wrap;
+        flex-direction: row;
+    }
+
+    .left {
+        flex: 1;
+        width: 100%;
+    }
+    
+    .right {
+        flex: 1;
+        width: 100%;
+    }
+
+    #recipe-title {
+        margin-top: 30px;
+        margin-bottom: 30px;
+        display: block;
+        text-align: center; 
+        font-family: 'Poppins';
+        font-size: 60pt;
+    }
 }
