--- a/Mix/styles.css
+++ b/Mix/styles.css
@@ -54,121 +54,52 @@ body {
   margin-bottom: 50px;
 }
 
-.recipe-creator-container {
+
+.title {
+    display: block;
     text-align: center;
+    font-family: 'Inter';
+    font-weight: 500;
+    font-size: 40pt;
+    margin-top: 70px;
+    margin-bottom: 50px;
 }
 
-.recipe-creator {
-    display: inline-block;
-    text-align: left;
+#action-img {
+    width: 400px;
 }
 
-.activity {
-    background-color: #BC2680;
-    color: #FFF0DE;
-    font-family: 'Poppins';
-    font-size: 25px;
-    border-radius: 15px;
-    padding: 20px;
-    margin-bottom: 40px;
-}
-
-#product {
-    margin-left: 10%;
-    width: 30%;
-    color: #FFF0DE;
-    background-color: inherit;
-    font-size: 20pt;
-    font-family: 'Poppins';
-    border: 0;
-    box-shadow: 0;
-    border-bottom: 2px #FFF0DE solid;
-}
-
-#quantity {
-    margin-left: 5%;
-    margin-right: 5%;
-    width: 30%;
-    color: #FFF0DE;
-    background-color: inherit;
-    font-size: 20pt;
-    font-family: 'Poppins';
-    border: 0;
-    box-shadow: 0;
-    border-bottom: 2px #FFF0DE solid;
-}
-
-::placeholder {
+.loading-bar-wrapper {
+    position: block;
     text-align: center;
-    font-family: 'Poppins';
-    color: #FFF0DE;
-    opacity: 50%;
+    width: 40%;
+    margin: auto;
 }
 
-#units {
-    background-color: #FFF0DE;
-    border: 0;
-    font-size: 20pt;
-    font-family: 'Poppins';
-    border-radius: 15px;
-    padding: 5px;
-    padding-left: 15px;
+.loading-bar {
+    position:relative;
+    font-family: 'Inter';
+    text-align: center;
+    width: 40%;
+    border: 2px solid #F589B0;
+    background-color: #FFFFFF;
+    margin: auto;
+    border-radius: 20px;
+    overflow: hidden;
 }
 
-.icons-row {
-    display: flex;
-    justify-content: space-between;
+.loading-bar > span {
+    position: relative;
+    display: block;
+    line-height: 40px;
     height: 100%;
-}
-
-.icon-wrapper {
-    margin: 10px 5px 10px 5px;
-    background-color: pink;
-    display: flex;
-    justify-content: center;
-    cursor: pointer;
-    padding-top: 30px;
-    padding-bottom: 30px;
-    border-radius: 40%;
-    width: 16%;
-}
-
-.icon {
-    width: 50%;
-}
-
-.button-container {
-    display: flex;
-    justify-content: space-between;
-    width: 100%;
-}
-
-#cancel {
-    margin-top: 30px;
-    display: inline-block;
-    width: 30%;
-    height: 40px;
-    background-color: #FFF0DE;
-    color: #F589B0;
-    border: 0;
-    border-radius: 7px;
-    text-align: center;
-    font-family: Poppins;
-    font-size: 1.2rem;
-    cursor: pointer;
-}
-
-#ready {
-    margin-top: 30px;
-    display: inline-block;
-    width: 30%;
-    height: 40px;
     background-color: #F589B0;
-    color: #FFF0DE;
-    border: 0;
-    border-radius: 7px;
-    text-align: center;
-    font-family: Poppins;
-    font-size: 1.2rem;
-    cursor: pointer;
+}
+
+.loading-bar > div {
+    position: absolute;
+    color: black;
+    font-size: 20px;
+    width: 100%;
+    top: 8px;
 }
