--- a/Sign up/styles.css
+++ b/Sign up/styles.css
@@ -36,6 +36,7 @@ body {
     font-weight: 400;
     color: #FFF0DE;
     font-size: 24px;
+    cursor: pointer;
 }
 
 .login-button:hover, .register-button:hover {
@@ -94,6 +95,7 @@ body {
     margin-right: auto;
     font-family: Poppins;
     font-size: 1.2rem;
+    cursor: pointer;
 }
 
 .have-account {
